@@ -2,8 +2,8 @@
 <!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
 "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
   <!ENTITY appname "GNOME Photo Frame">
-  <!ENTITY appversion "1.3">
-  <!ENTITY manrevision "1.3">]>
+  <!ENTITY appversion "1.4">
+  <!ENTITY manrevision "1.4">]>
   
   <!-- Information about the entities.
        The legal.xml file contains legal information, there is no need to edit the file. 
@@ -57,6 +57,15 @@
     <revhistory>
       <revision>
         <revnumber>&appname; Manual V&manrevision;</revnumber>
+        <date>2011-06-22</date>
+        <revdescription>
+          <para role="author">Cristian Marchi
+          <email>cri.penta@gmail.com</email></para>
+        </revdescription>
+      </revision>
+
+      <revision>
+        <revnumber>&appname; Manual V1.3</revnumber>
         <date>2011-04-09</date>
         <revdescription>
           <para role="author">Cristian Marchi
@@ -260,6 +269,15 @@
           source will open in your system&rsquo;s default web browser (if the content comes from an
           online service), and in your system&rsquo;s default image viewer (if the
           content is local).</para>
+       </listitem>
+      </varlistentry>
+
+      <varlistentry>
+      <term><emphasis role="bold"><guiicon>share-icon</guiicon></emphasis></term>
+        <listitem>
+          <para>This icon is displayed in the upper left corner of the frame. With a click on it you can
+          share the displayed image in your preferred blogging or social network platform 
+          (like facebook or Tumblr).</para>
        </listitem>
       </varlistentry>
       
