@@ -1,3 +1,8 @@
+2011-06-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* help/C/gphotoframe.xml: Updated a help documentation.  
+	  Thanks Cristian Marchi!
+
 2011-06-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* it.po, help/: Updated Italian translation and help images.
